<resources>
    <string name="app_name" translatable="false">Gift Card Ledger</string>
    <string name="action_settings">Settings</string>
    <string name="card_name_label">Name</string>
    <string name="card_name_hint">Enter the gift card name.</string>
    <string name="card_edit_balance_label">Edit Balance</string>
    <string name="card_balance_hint">Add / Deduct here!</string>
    <string name="card_add_balance_hint">Enter Balance</string>
    <string name="card_history_label">History</string>
    <string name="card_number_label">Number</string>
    <string name="card_number_hint">Enter the gift card number.</string>
    <string name="card_delete_question">Delete?</string>
    <string name="card_balance_label">Balance</string>
    <string name="ok_button">Ok</string>
    <string name="cancel_button">Cancel</string>
    <string name="new_card">New Card</string>
    <string name="show_subtitle">Show Count</string>
    <string name="hide_subtitle">Hide Count</string>
    <string name="image_preview">Preview</string>
    <string name="no_data_available">Add a gift card!</string>
    <string name="save">Save</string>
    <string name="transaction_label">Transaction History</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="add">Add</string>
    <string name="deduct">Deduct</string>
    <string name="undo">Undo</string>
    <string name="undo_last">Undo last transaction?</string>

    <plurals name="subtitle_plural">
        <item quantity="one">%1$d card</item>
        <item quantity="other">%1$d cards</item>
    </plurals>

    <string name="card_photo_button_description">Take a photo of your gift card</string>
    <string name="card_photo_no_image_description">Gift card photo (not set)</string>
    <string name="card_photo_image_description">Gift card photo (set)</string>

</resources>
