<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_name_label"/>

    <EditText
        android:id="@+id/card_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_name_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_balance_label"/>

    <EditText
        android:id="@+id/card_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_balance_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_number_label"/>

    <EditText
        android:id="@+id/card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_number_hint"/>

</LinearLayout>